# JOL

./: Bazowa.h  CMakeLists.txt  Gra.cpp  Gra.h  Gracz.cpp  Gracz.h  Platforma.cpp  Platforma.h  Zasoby.h  Ziemia.cpp  Ziemia.h  main.cpp
